--- a/IPMS_KLK/Views/MainMenu.xaml
+++ b/IPMS_KLK/Views/MainMenu.xaml
@@ -2,7 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenu"            
-             BackgroundImageSource="bg.jpg">
+             BackgroundImageSource="bg.jpg"
+             NavigationPage.HasBackButton="False"
+             NavigationPage.HasNavigationBar="True"
+             NavigationPage.BackButtonTitle="Back">
 
     <ContentPage.Resources>
         <ResourceDictionary>
