--- a/IPMS_KLK/Views/MainMenuOptions/TaskInspection.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/TaskInspection.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenuOptions.TaskInspection"
-             BackgroundImageSource="bg.jpg">
+             BackgroundImageSource="bg.jpg"
+             NavigationPage.HasBackButton="True">
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -12,38 +13,103 @@
                 <Setter Property="Padding" Value="0,15,0,15"/>
                 <Setter Property="Margin" Value="0,10,0,0"/>
                 <Setter Property="CornerRadius" Value="20"/>
-                <Setter Property="BackgroundColor" Value="Black"/>
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="TextTransform" Value="None"/>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="HorizontalOptions" Value="Fill"/>
+                <Setter Property="BackgroundColor" Value="Green"/>
+            </Style>
+
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+            </Style>
+
+            <Style TargetType="Entry">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="PlaceholderColor" Value="DarkGray"/>
+                <Setter Property="ClearButtonVisibility" Value="WhileEditing"/>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="HorizontalOptions" Value="Fill"/>
+                <Setter Property="HorizontalTextAlignment" Value="Center"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="MaxLength" Value="8"/>
+            </Style>
+
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="White"/>
+                <Setter Property="BorderColor" Value="DarkGray"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="HasShadow" Value="True"/>
+                <Setter Property="Padding" Value="0"/>
+            </Style>
+
+            <Style TargetType="ImageButton">
+                <Setter Property="Source" Value="scan.png"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
         <StackLayout>
-            <Grid>
-                <Image Source="ffb.jpg" Aspect="AspectFill" HeightRequest="150"/>
-                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
-                <Label Text="TASK INSPECTION"
-                   FontSize="Title"
-                   FontAttributes="Bold"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"
-                   Padding="0,20,0,0"
-                   TextColor="White"/>
+            
+            <StackLayout>
+                <Label x:Name="BunchCCounting_pg1_OC_Name"
+                       Text="OC :135-LADANG SERAPOH"
+                       HorizontalOptions="CenterAndExpand"/>
+            </StackLayout>
+
+            <Grid VerticalOptions="Center" Padding="20,10,20,0" ColumnSpacing="10" RowSpacing="15">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Text="1. Worker ID" Grid.Row="0" Grid.Column="0"/>
+                <Label Text="2. Field No" Grid.Row="1" Grid.Column="0"/>
+                <Label Text="3. Task No" Grid.Row="2" Grid.Column="0"/>
+                <Label Text="4. Direction Type" Grid.Row="3" Grid.Column="0"/>
+
+                <Frame Grid.Row="0" Grid.Column="1">
+                    <Entry x:Name="TaskInspection_WorkerID_Entry"/>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="1">
+                    <Entry x:Name="TaskInspection_FieldNo_Entry"/>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="1">
+                    <Entry x:Name="TaskInspection_TaskNo_Entry"/>
+                </Frame>
+                <StackLayout RadioButtonGroup.GroupName="Direction_Type"  Grid.Row="3" Grid.Column="1">
+                    <RadioButton Content="P&lt;&lt;" Value="Left" IsChecked="True" x:Name="start_from_left"/>
+                    <RadioButton Content="&gt;&gt;P" Value="Right" x:Name="start_from_right"/>
+                </StackLayout>
+                
+
+                <ImageButton Grid.Row="0" Grid.Column="2" x:Name="btn_ScanFieldNo"/>
+                <ImageButton Grid.Row="1" Grid.Column="2" x:Name="btn_ScanTaskNo"/>
+                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="btn_ScanCutterID"/>
+                <Button Grid.Row="4" Grid.Column="0" Text="RESET" BackgroundColor="Red" x:Name="btn_TaskInspection_Reset"/>
+
             </Grid>
 
-            <StackLayout Padding="20,0,20,0" >
-                <Frame BorderColor="LightGray" HasShadow="True" CornerRadius="20">
-                    <StackLayout>
-                        <Button Text="1. -" />
-                        <Button Text="2. -"/>
-                        <Button Text="3. -"/>
-                        <Button Text="4. -" />
-                        <Button Text="5. -" />
-                    </StackLayout>
-                </Frame>
+            <StackLayout Margin="20,0,20,0" VerticalOptions="EndAndExpand">
+                <Button Text="NEXT"/>
+                <Button Text="PRINT SUMMARY" IsEnabled="False"/>
             </StackLayout>
+
+
 
             <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
 
