--- a/IPMS_KLK/Views/MainMenuOptions/FFBCounting.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/FFBCounting.xaml
@@ -41,6 +41,7 @@
                         <Button Text="3. FFB Verification" Clicked="FFBCounting_to_FFBVerification"/>
                         <Button Text="4. Amend Verified FFB" Clicked="FFBCounting_to_AmendVerifiedFFB"/>
                         <Button Text="5. Mandore Attendance" Clicked="FFBCounting_to_MandoreAttendance" />
+                        <Button Text="6. Bunch Count Record" Clicked="FFBCounting_to_Record"/>
                     </StackLayout>
                 </Frame>
             </StackLayout>
