--- a/IPMS_KLK/Views/MainMenuOptions/ReceiptReprintMenuOptions/ReceiptCancel_InputScreen.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/ReceiptReprintMenuOptions/ReceiptCancel_InputScreen.xaml
@@ -1,12 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IPMS_KLK.Views.MainMenuOptions.ReceiptReprintMenuOptions.ReceiptCancel_InputScreen">
+             x:Class="IPMS_KLK.Views.MainMenuOptions.ReceiptReprintMenuOptions.ReceiptCancel_InputScreen"
+             BackgroundImageSource="bg.jpg">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Padding" Value="0,15,0,15"/>
+                <Setter Property="Margin" Value="0,10,0,0"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="BackgroundColor" Value="Black"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="TextTransform" Value="None"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="receipt cancel"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Grid>
+                <Image Source="desk.jpg" Aspect="AspectFill" HeightRequest="150"/>
+                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
+                <Label Text="RECEIPT CANCEL"
+                   FontSize="Title"
+                   FontAttributes="Bold"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   Padding="0,20,0,0"
+                   TextColor="White"/>
+            </Grid>
+
+            <Grid Margin="20,0,20,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+
+                <Label Text="Transaction No:" 
+                       TextColor="Black" 
+                       Grid.Column="0" 
+                       VerticalOptions="CenterAndExpand"
+                       FontAttributes="Bold"
+                       FontSize="20"/>
+                <Entry Grid.Column="1"/>
+                <ImageButton Source="scan.png" BackgroundColor="Transparent" Grid.Column="2"/>
+            </Grid>
+
+
+            <StackLayout VerticalOptions="EndAndExpand">
+                <Button Margin="20,0,20,0" Text="CANCEL" BackgroundColor="Green"  CornerRadius="20"/>
+                <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50"  Margin="0,0,0,10"/>
+            </StackLayout>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
