--- a/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/OthersChanges.xaml
@@ -33,17 +33,38 @@
                    VerticalOptions="CenterAndExpand"/>
             </Grid>
 
-            <StackLayout Padding="20,0,20,0" >
-                <Frame BorderColor="LightGray" HasShadow="True" CornerRadius="20">
-                    <StackLayout>
-                        <Button Text="1. Others"/>
-                        <Button Text="2. Changes"/>
-                    </StackLayout>
-                </Frame>
+            <Grid Margin="20,0,20,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label FontSize="Medium" FontAttributes="Bold" TextColor="Black" Text="OC Code" Grid.Column="0" VerticalOptions="Center"/>
+                <Entry IsEnabled="False" Grid.Column="1" VerticalOptions="Center"/>
+                <ImageButton Source="scan.png" BackgroundColor="Transparent"  Grid.Column="2" VerticalOptions="Center"/>
+            </Grid>
+
+            <StackLayout  VerticalOptions="EndAndExpand">
+                <Label FontSize="Medium" TextColor="Black" Text="Issue Receipt?" HorizontalOptions="CenterAndExpand"/>
+                <Switch Scale="1.5" IsToggled="True" HorizontalOptions="CenterAndExpand" />
+
+
+
+                <Label FontSize="Medium" Margin="0,10,0,0" TextColor="Black" Text="Scanning Lent Labor OC?" HorizontalOptions="CenterAndExpand"/>
+                <Grid Margin="20,20,20,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Text="Yes" BackgroundColor="DarkGreen" Grid.Column="0" Command="{Binding AddNewJobScanOC_YesCommand}"/>
+                    <Button Text="No" BackgroundColor="DarkRed" Grid.Column="1" Command="{Binding AddNewJobScanOC_NoCommand}"/>
+                </Grid>
+
+                <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
+
             </StackLayout>
-
-            <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
-
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
